# learning

./: pom.xml
akka/: build.sbt
android/an-kotlin-playground/: .gitignore  build.gradle
antlr/: README.md  pom.xml
antlr/graph-dsl/: pom.xml
antlr/parent/: pom.xml
cats-effect-kafka-consumer/: build.sbt
cats-effect-kafka-consumer/project/: Dependencies.scala
cats-effect-playground/project/: Dependencies.scala
cats-free-playground/: build.sbt
cats-playground/: .gitignore  build.sbt
circe/: build.sbt
eclipse-link-playground/: .gitignore  README.md  build.sbt
freemarker-playground/: build.sbt
fs2-playground/: .gitignore  .scalafmt.conf  build.sbt
fs2-playground/project/: Dependencies.scala  plugins.sbt
gwtp/: README.md  pom.xml
gwtp/gwt-simple-example/: pom.xml
gwtp/gwt-simple-rpc-example/: pom.xml
gwtp/gwt-widgets/: pom.xml
gwtp/gwtp-logging-example/: pom.xml
gwtp/gwtp-simple-example/: pom.xml
gwtp/gwtp-spring-example/: .gitignore  pom.xml
gwtp/gwtp-tab-example/: pom.xml
haskel/: README.md
haskel/lear-you-a-haskell-for-great-good/: baby.hs  (+1 more)
hazelcast/: pom.xml
http4s-playground/: README.md  build.sbt  docker-compose.yml  psql.sh
http4s-ross-baker-talk/: README.md  build.sbt
http4s-server-playground/: build.sbt  native-image-readme.md
lua-playground/: README.md  eight-queen.lua  playground.lua
outh2/: README.md
prolog-playground/: args_demo.pl  listPlayground.pl  list_demo.pl
purescript-playground/: README.md  index.js  spago.dhall
rmq/: pom.xml
ruby-playground/: grep-ruby.rb  grep2-ruby.rb
rxjava/: pom.xml
scala-fp/: build.sbt
sclick-playground/: README.md  build.sbt
servant-playground/: CHANGELOG.md  README.md  TAGS  hie.yaml  servant-playground.cabal  tags
servant-playground/app/: Main.hs
servant-playground/src/: NodeCli.hs  Server.hs
servant-playground/static-files/: users.html
servlet-async-poc/: build.sbt
shapeless/: build.sbt
spring/: README.md  pom.xml
taggedt-type-playground/: build.sbt
thread-local-playground/: build.sbt
xslt-playground/: pom.xml
μparse/: build.sbt
(+408 files in other folders)
