cabal-version:      2.4
name:               servant-playground
version:            0.1.0.0

-- A short (one-line) description of the package.
-- synopsis:

-- A longer description of the package.
-- description:

-- A URL where users can report bugs.
-- bug-reports:

-- The license under which the package is released.
-- license:
author:             Sławomir Śledź
maintainer:         slawomir.sledz@gmail.com

-- A copyright notice.
-- copyright:
-- category:
extra-source-files: CHANGELOG.md

library
    exposed-modules:  
          MyLib
        , Server

    -- Modules included in this library but not exported.
    -- other-modules:

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:
        base >= 4.7 && <5
      , aeson
      , bytestring
      , mtl
      , text
      , uuid
      , servant
      , servant-server
      , servant-client
      , transformers
      , wai
      , attoparsec
      , base-compat
      , containers
      , directory
      , http-api-data
      , http-client
      , http-media
      , http-types
      , string-conversions
      , warp
      , blaze-html   >= 0.9.0.1 && < 0.10
      , blaze-markup >= 0.8.0.0 && < 0.9
      , cookie       >= 0.4.3   && < 0.5
      , js-jquery    >= 3.3.1   && < 3.4
      , lucid        >= 2.9.11  && < 2.10
      , random       >= 1.1     && < 1.3
      , servant-js   >= 0.9     && < 0.10
      , time         >= 1.6.0.1 && < 1.13

    hs-source-dirs:   src
    default-language: Haskell2010
    ghc-options:      -Wall -optl-static -optl-pthrea

executable servant-playground
    main-is:          Main.hs

    -- Modules included in this executable, other than Main.
    -- other-modules:

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:
         base >= 4.7 && <5
       , servant-playground

    hs-source-dirs:   app
    default-language: Haskell2010
